# ai-buddy

./: Cargo.toml  rustfmt.toml
src/: main.rs
src/ais/: mod.rs
src/ais/asst/: mod.rs
