[package]
name = "ai-buddy"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"       # For early development

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.17"
# -- D/Serialize
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Cli
console = "0.15"
dialoguer = "0.11"
textwrap = "0.16"
# -- Files
walkdir = "2"
globset = "0.4"
# -- Others
derive_more = { version = "1.0.0-beta", features = [
  "from",
  "display",
  "deref",
] }
dotenv = "0.15.0"
